--- a/20221227_Markdown.md
+++ b/20221227_Markdown.md
@@ -9,7 +9,7 @@
 
 <br>
 
-# 마크다운 문법 정리
+# 마크다운 기반의 문서 작성법
 
 <br>
 
@@ -64,7 +64,8 @@
 # 코드블록(''' ''')
 ### 1. 키보드 물결 밑에 있는 아이콘 3개
 ### 2. 검정 배경 창 (주로 python 코드 칠 때 사용)
-### ~~3. 들여쓰기(tab)해도 같은 기능을 가진다.~~
+### 3. 글을 강조할 수 있다.
+### ~~4. 들여쓰기(tab)해도 같은 기능을 가진다.~~
 
 
 ```python
@@ -75,6 +76,13 @@ print('hello')
 # html에서는 샵이 주석이 아니다
 <!-- 주석 -->
 ```
+
+```json
+{
+"안녕 나는 은정이야"
+}
+```
+
 <br>
 
 # 인라인 코드블록(' ') 
@@ -151,8 +159,11 @@ print('hello')
 <br>
 
 # 수평선
----
----
+--- `대쉬`
+
+*** `별표`
+
+___ `언더대쉬`
 
 <br>
 
@@ -160,8 +171,13 @@ print('hello')
 문자 양쪽으로 ~~ 붙이기.
 > ~~이 메세지는 삭제 되었습니다.~~
 
+<br>
 
+# 마크다운 추가자료
 
+- GitHub Flavored Markdwon
+- Mastering Markdown
+- Markdown Guide
 
 
 
