--- a/20221227_Markdown.md
+++ b/20221227_Markdown.md
@@ -117,11 +117,11 @@ print('hello')
 # 이미지
 - 보노보노.png를 보여주는 문법
 <br>
-![](보노보노.JPG)
+![](d/보노보노.jpg)
 * 미켈레.png를 보여주는 문법
 <br>
-![](미켈레.jpg)
-![1](미켈레.jpg)
+![](d/미켈레.jpg)
+![1](d/미켈레.jpg)
 
 >이미지 파일들이 Markdown과 같은 상의 폴더 안에 존재해서 한다. 경로 잘못 설정하면 사진이 깨진다.
 
