--- a/E-learning/1. 비개발자를 위한 IT 지식.md
+++ b/E-learning/1. 비개발자를 위한 IT 지식.md
@@ -30,7 +30,9 @@
 
 <br>
 
-# 🎨 2. 컴퓨터의 구성요소 - 하드웨어
+# 🎨 2. 컴퓨터의 구성요소 - `하드웨어`
+
+## 하드웨어의 종류
 
 1)CPU : 두뇌역할
 - 기억 못함. 머리회전 빠름.
@@ -56,27 +58,22 @@
 
 `하드웨어 -> 운영체제 -> 프로래밍 언어 탄생 -> IDE/코드 편집기 -> 프로그래밍(=코딩, 코드 적기) -> 컴파일러/인터프린터(번역기) -> 프로그램 탄생`
 
+<br>
+
 |OS|Company|Language|
 |-|-|-|
 |Windows| Microsoft | C#, Visual Basic, C++, JavaScript|
 |Mac OS, iOS|Apple|Objective-C, Swift|
 |Android|Google|JAVA, Kotlin|
 
+<br>
+
 > 회사의 사정에 따라 개발자의 행동 방향이 달라지기 때문에, 구글이나 애플 컨퍼런스를 유심히 봐야한다.
 
 - 애플의 방침에 따라 Mac OS와 iOS 개발자들이 현재는 Objective-C에서 Swift로 넘어온 상태
 - Google과 Oracle의 충돌로, Google이 JAVA에서 Kotlin으로 넘어가겠다고 함
 
-
-
-
-
-
-
-
-
-
-
+<br>
 
 > *한번만 개발해도 모든 OS에서 돌아가는 언어는 없을까?*
 
@@ -103,3 +100,30 @@ iOS 개발자
 
 
 
+# 🎨 4. `네트워크`
+
+![](/클라&백.PNG)
+
+
+
+# 🎨 5. `애플리케이션과 웹의 차이점`
+
+
+웹 = HTML + CSS + JavaScript로 구성
+
+HTML
+- 웹의 뼈대를 구성하는 언어
+- 팀 버너스리가 연구한 결과물을 배포하기 위해 탄생됨. '지식의 대백과사전'느낌
+- 정보 전달이 목적이기 때문에 디자인이 못생겼음
+- 프로그래밍 언어가 아님
+
+CSS
+-HTML의 지루한 디자인을 세련되게 바꿔주기 위해 탄생함
+- 프로그래밍 언어 아님
+
+> '퍼블리셔가 퍼블리싱을하다'
+퍼블리셔 : HTML과 CSS로 정보를 보여주고, 그 정보를 디자인해주는 직업
+퍼블리싱 : 이러한 행위
+
+
+![](/HTML.PNG)
