--- a/Python/자습.md
+++ b/Python/자습.md
@@ -1,3 +1,5 @@
+### 📅 2023년 3월 27일
+
 ## 코딩 분야
 
 1. 프론트엔드(클라이언트) : 웹, 앱(Android, iOS), Pc, 게임
@@ -22,14 +24,16 @@
 ### 백엔드 - 서버
 - 각 언어 별로 프레임워크가 있다.
 - 백엔드에서는 프레임워크를 사용한다.
+- 장고는 거대한 상자와 같아서 그 안을 뒤지면서 필요없는 건 버리고 나에게 필요한 것만 남겨놓고 작업한다.
+- NodeJS는 그와 반대로 안에 아무것도 없고 레고 처럼 조합을 만들어가야한다.
 
-|언어|프레임워크|
-|--|--|
-|파이썬| django|
-|자바스크립트|node.js|
-|자바|spring|
-|php|Laravel|
-|루비|RAILS|
+|언어|프레임워크|특징|사용처|
+|--|--|--|--|
+|파이썬| django|CRUD에 최적화|인스타, 유튜브,블로그|
+|자바스크립트|node.js|리얼타임, API, 스트리밍, 커스터마이징에 최적화| 넷플릭스, 우버|
+|자바|spring|-|-|
+|php|Laravel|-|-|
+|루비 (아무도X) |RAILS|-|-|
 
 ### 백엔드 - DB
 
@@ -39,6 +43,10 @@
 |ORACLE|
 |SQLite|
 |PostgreSQL|
+
+### 📅 3월 28일
+
+
 
 
 
