--- a/03_MySQL/1. Relational Database Terms.md
+++ b/03_MySQL/1. Relational Database Terms.md
@@ -1,43 +1,49 @@
 # KDT 2기 2월 8일 학습 내용
 
-# 오늘의 핵심
-RDMBS를 통해 테이블을 구조화할 수 있고 외래키로 테이블간의 관계를 형성한다.
+# 관계형 데이터베이스
+- 데이터 간에 관계가 있는 데이터의 모음
+- 데이터 베이스는 거대하고 복잡한 데이터를 다루기 위해 고안된 도구이기 때문에 데이터를 CRUD하는 과정이 중요하다.
+
+### 각 데이터 간 비교를 위해서 고유한 식별값을 부여한다 => '기본키(Primary Key)' = 'PK'
 
 # 관계형 데이터베이스 용어
 
-1. Table (aka Relation)
+## Table (Relation)
 - 데이터를 기록하는 곳
-- 간혹 Relation이라고 하기도 한다.
+- Relation이라고 하기도 한다.
 
-2. Field(aka Column, Attribute(속성))
+## Field (Column, Attribute)
 - 열
-- 각 필드에는 데이터의 값이 아닌 `데이터 타입`이 지정됨
+  - 4개의 Field
+    id, 이름,청구지, 주소지
+- 각 필드에는 데이터의 값이 아닌 `데이터 형식`이 지정된다.
+  - id : 정수
+  - 이름, 청구지, 주소지 : 문자열
 - 관계형 데이터베이스에서는 Row와 Column이라는 용어를 잘 쓰지 않는다.
 
-4개의 Field
-[id(정수), 이름,청구지,주소지(문자열)](https://github.com/gata96/TIL/blob/master/MySQL/Img/10.png)
-
-3. [Record(aka Row, Tuple)](https://github.com/gata96/TIL/blob/master/MySQL/Img/11.png)
+## Record (Row, Tuple)
 - 행
 - 각 레코드에는 구체적인 `데이터 값`이 저장됨
 - 레코드 한 줄이 데이터 한 줄
 
-4. [Database(aka Schema)](https://github.com/gata96/TIL/blob/master/MySQL/Img/12.png)
-- 테이블의 집합(Set of tables)
+## Database = DB (Schema)
+- 테이블의 모음 (Set of tables)
 
-5. [Primary Key(기본키)](https://github.com/gata96/TIL/blob/master/MySQL/Img/13.png)
-- 각 레코드의 고유한 값
+## Primary Key(기본키)
+- 데이터를 대표 할 수 있는 고유한 값
+- Null 값 허용 X
+- 키 값이 변하지 않아야함
 - 관계형 데이터베이스에서 각각의 레코드를 구분할 수 있는 식별자
 - 식별자이기에, 중복이 있으면 안되고 유일해야 한다.
 
-6. [Foreign Key(외래키)✨](https://github.com/gata96/TIL/blob/master/MySQL/Img/14.png)
-- 테이블들의 필드 중 다른 테이블의 레코드를 식별할 수 있는 키
+## Foreign Key(외래키)✨
 - 각 레코드에서 서로 다른 테이블 간의 `관계를 만드는 데 ` 사용
-- 관계형 데이터 베이스에서의 핵심
+- 관계형 데이터 베이스의 핵심
+- Null 값과 중복 값 허용
 
-Data를 잘 다루기 위해서는 Table을 잘 다뤄야하고, Table을 다루기 위해서는 Database를 다뤄야하는데 Database 자체를 다루는 건 쉽지않아서, Database를 관리할 수 있도록 도와주는 Tool이 존재한다.
+Data를 잘 다루기 위해서는 Table을 잘 다뤄야하고, 이를 위해서 Database를 다뤄야하는데 Database 자체를 다루는 건 쉽지 않다. Database를 관리할 수 있도록 도와주는 Tool인 RDBMS가 존재한다.
 
-# [RDBMS (Relational Database Management System)](https://github.com/gata96/TIL/blob/master/MySQL/Img/15.png)
+# RDBMS (Relational Database Management System)
 - 관계형 데이터베이스를 관리하는 소프트웨어 프로그램
 
 ## DBMS (Database Management System)
@@ -49,9 +55,9 @@ Data를 잘 다루기 위해서는 Table을 잘 다뤄야하고, Table을 다루
 ## 대표적인 RDMBS 
 목적: 관계형 데이터 베이스를 잘 관리할 수 있도록 도와주는 것
 언어: 모두 SQL을 사용
-- `MYSQL`
+- MySQL
 - PostgreSQL
-- Oracle Database
+- Oracle
 - MS SQL Server
 
 ## MYSQL
