Renamed 3. Single Table Queries 1/readme.md

--- a/03_MySQL/1. Relational Database Terms/1. Relational Database Terms.md
+++ b/03_MySQL/1. Relational Database Terms/1. Relational Database Terms.md
@@ -41,6 +41,9 @@
 - 관계형 데이터 베이스의 핵심
 - Null 값과 중복 값 허용
 
+![외래키](https://github.com/gata96/TIL/assets/121420427/3011122c-2992-407d-9bc9-7a5fcee2ef5c)
+
+
 Data를 잘 다루기 위해서는 Table을 잘 다뤄야하고, 이를 위해서 Database를 다뤄야하는데 Database 자체를 다루는 건 쉽지 않다. Database를 관리할 수 있도록 도와주는 Tool인 RDBMS가 존재한다.
 
 # RDBMS (Relational Database Management System)
