--- a/03_MySQL/3. Single Table Queries 1/3. Single Table Queries 1.md
+++ b/03_MySQL/3. Single Table Queries 1/3. Single Table Queries 1.md
@@ -111,10 +111,17 @@ SELECT
 FROM
     table_name;
 ```
+- AS를 생략 할 수 있다.
+- AS 생략 시, new_name에 띄어쓰기가 있다면 하나의 컬럼명으로 인식을 못하기 때문에 ''나 ""를 붙혀준다.
+  
+```sql
+SELECT
+    USD '시가총액 US dollar'
+FROM
+    table;
+```
 
-⭐ AS로 field명을 바꿔서 출력할 때, SELECT문으로 데이터를 조회하는 것이지 조작하는 것이 아니다. 그러므로 원본 table의 수정이나 조작이 없다.
-
-⭐ 현재 우리는 오로지 DQL만 보고 있다. 이 말은 즉슨, 데이터를 조작하는 것이 아닌 원본 데이터는 건들지 않고, 출력창에 보이는 것. 즉, `조회`만 보고 있기 때문에 AS를 사용해서 field의 이름을 바꾼다고 해도 출력창에만 그렇게 보이는 것일 뿐, 원본 데이터는 전혀 변함이 없다는 것을 기억하자.
+⭐ AS로 field명을 바꿔서 출력할 때, SELECT문으로 데이터를 조회하는 것이지 조작하는 것이 아니다. 그러므로 원본 table의 수정이나 조작이 없다. 현재 우리는 오로지 DQL만 보고 있다. 이 말은 즉슨, 데이터를 조작하는 것이 아닌 원본 데이터는 건들지 않고, 출력창에 보이는 것. 즉, `조회`만 보고 있기 때문에 AS를 사용해서 field의 이름을 바꾼다고 해도 출력창에만 그렇게 보이는 것일 뿐, 원본 데이터는 전혀 변함이 없다는 것을 기억하자.
 
 ✔️example 5 -- field끼리 연산 가능. 프로그래밍이 되기위한 조건 첫번째가 연산이 가능해야한 것이기 때문에 SQL에서도 연산이 가능하다.
 ```sql
