--- a/03_MySQL/4. Single Table Queries 2/4. Single Table Queries 2.md
+++ b/03_MySQL/4. Single Table Queries 2/4. Single Table Queries 2.md
@@ -19,7 +19,8 @@
 
 ✅ DISTINCT : 중복 제거
 - SELECT 키워드 바로 뒤에 작성
-- SELECT DISTINCT 키워드 다음에 유일했으면 좋겠는 하나 이상의 필드를 선택
+- field 컬럼 안에 값들의 중복을 하나로 표현한다. 
+- 예 Korea, Korea, Korea => Korea
 
 ```SQL
 SELECT DISTINCT
