--- a/03_MySQL/4. Single Table Queries 2/4. Single Table Queries 2.md
+++ b/03_MySQL/4. Single Table Queries 2/4. Single Table Queries 2.md
@@ -1,23 +1,19 @@
 # KDT 2기 2월 13일 학습 내용
 
-## 3. Filtering data
+## Filtering data
 데이터를 필터링하여 중복 제거, 조건 설정 등 SQL Query를 제어하기
 
 ### Filtering data 관련 Keywords
-- Clause
-    - DISTINCT
-    - WHERE
-    - LIMIT
-
-- Operator
-    - BETWEEN
-    - IN
-    - LIKE
-    - Comparison
-    - Logical
+- DISTINCT
+- WHERE
+- LIMIT
+- BETWEEN
+- IN
+- LIKE
 
 
-✅ DISTINCT : 중복 제거
+
+## 1. DISTINCT : 중복 제거
 - SELECT 키워드 바로 뒤에 작성
 - field 컬럼 안에 값들의 중복을 하나로 표현한다. 
 - 예 Korea, Korea, Korea => Korea
@@ -31,7 +27,7 @@ ORDER BY
     field;
 ```
 
-✅ WHERE : PYTHON의 IF와 같은 역할. 조건문
+## 2. WHERE : PYTHON의 IF와 같은 역할. 조건문
 - FROM 키워드 뒤에 위치
 ```SQL
 SELECT DISTINCT
@@ -54,7 +50,7 @@ WHERE
 WHERE
     jobtitle >= 3 OR coffee = 'Sales Rep'
 ```
-✅ BETWEEN A AND B
+## 3. BETWEEN A AND B
 - A 이상 B 이하
 - WHERE 절 다음에 ORDER BY를 쓴다.
 
@@ -71,7 +67,7 @@ WHERE
     office IN (1,3,4)
 ```
 ✅ NOT IN
-- 1과 3과 4가 아닌 데이터
+- 1과 3과 4가 아닌 데이터들
 ```SQL
 WHERE
     office NOT IN (1,3,4)
@@ -80,6 +76,24 @@ WHERE
 
 ✅ LIKE : 같이 특정 패턴에 일치하는지 확인
 - 예시1 '테이블 employees에서 lastName 필드 값이 son으로 끝나는 데이터의 lastName, firstName을 조회'
+
+```sql
+SELECT *
+FROM 테이블
+WHERE 컬럼 LIKE 패턴
+```
+
+|LIKE Operator|Description|
+|-|-|
+|'a%'|'a'로 시작|
+|'%a'|'a'로 끝나는|
+|'%sl%'|'sl'이 포함된|
+|'_m%'|두번째 글자가 'm'인|
+|'a_%_%' 또는 'a__%'|'a로 시작하고 글자수가 3개 이상|
+|'t%a'|'t'로 시작하고 'a'로 끝나는|
+
+
+
 ```SQL
 SELECT 
     lastName, firstName
