--- a/03_MySQL/4. Single Table Queries 2/4. Single Table Queries 2.md
+++ b/03_MySQL/4. Single Table Queries 2/4. Single Table Queries 2.md
@@ -60,13 +60,13 @@ WHERE
 ORDER BY office;
 -- 'office 값이 1이상 4이하인 값'
 ```
-✅ IN
+## 4. IN
 - 1 또는 3 또는 4
 ```SQL
 WHERE
     office IN (1,3,4)
 ```
-✅ NOT IN
+## 5. NOT IN
 - 1과 3과 4가 아닌 데이터들
 ```SQL
 WHERE
@@ -74,7 +74,7 @@ WHERE
 ```
 <BR>
 
-✅ LIKE : 같이 특정 패턴에 일치하는지 확인
+## 6. LIKE : 같이 특정 패턴에 일치하는지 확인
 - 예시1 '테이블 employees에서 lastName 필드 값이 son으로 끝나는 데이터의 lastName, firstName을 조회'
 
 ```sql
@@ -91,8 +91,6 @@ WHERE 컬럼 LIKE 패턴
 |'_m%'|두번째 글자가 'm'인|
 |'a_%_%' 또는 'a__%'|'a로 시작하고 글자수가 3개 이상|
 |'t%a'|'t'로 시작하고 'a'로 끝나는|
-
-
 
 ```SQL
 SELECT 
@@ -122,12 +120,6 @@ WHERE JOINED LIKE '2021%'
 
 <BR>
 
-✅ Wildcard Characters
-
-'%' : 0개 이상의 문자열과 일치하는지 확인
-
-'_' : 단일 문자와 일치하는지 확인
-
 ✅ Comparison Operators
 
 =, >=, <=, IS, LIKE, IN, BETWEEN, AND
@@ -136,7 +128,7 @@ WHERE JOINED LIKE '2021%'
 
 AND(&&), OR(||), NOT(!)
 
-✅ LIMIT : 데이터 구간을 잘라서 출력하기
+## 7. LIMIT : 데이터 구간을 잘라서 출력하기
 
 예시 1
 ```SQL
@@ -175,7 +167,7 @@ LIMIT 4 OFFSET 3;
 ```
 <BR>
 
-## 4. Grouping data
+## 8. Grouping data
 GROUP BY
 - 레코드를 그룹화하여 요약본 생성 
 - SUM, AVG, MAX, MIN, COUNT와 함께 쓰인다.
@@ -206,7 +198,7 @@ FROM customers
 GROUP BY country
 HAVING AVG(creditLimit) > 80000;
 ```
-## 5. NULL
+## 9. NULL
 데이터에 NULL이 존재할 경우, 오름차순 정렬시 결과에 NULL이 먼저 온다.
 
 ### NULL 사용
