--- a/03_MySQL/4. Single Table Queries 2/4-1. Filtering Data.md
+++ b/03_MySQL/4. Single Table Queries 2/4-1. Filtering Data.md
@@ -6,12 +6,11 @@
 ### Filtering data 관련 Keywords
 - DISTINCT
 - WHERE
-- LIMIT
-- BETWEEN
+- BETWEEN A AND B
 - IN
+- NOT IN
 - LIKE
-
-
+- LIMIT
 
 ## 1. DISTINCT : 중복 제거
 - SELECT 키워드 바로 뒤에 작성
@@ -165,51 +164,4 @@ LIMIT 3,4
 LIMIT 4 OFFSET 3;
 -- 이 둘은 서로 동일한 코드
 ```
-<BR>
-
-## 8. Grouping data
-GROUP BY
-- 레코드를 그룹화하여 요약본 생성 
-- SUM, AVG, MAX, MIN, COUNT와 함께 쓰인다.
-- 중복을 제거한다.
-
-```sql
--- jobTitle 필드를 그룹화
-SELECT jobTitle
-FROM employees
-GROUP BY jobTitle;
-```
-```sql
---count 함수는 해당 필드가 몇번 나오는지 카운트해준다.
-SELECT jobTitle, COUNT(*)
-FROM employees
-GROUP BY jobTitle;
-```
-```sql
--- country필드를 그룹화하여 각 그룹에 대한 creditLimit 평균 값을 내림차순 조회
-SELECT country, AVG(creditLimit) AS average
-FROM customers
-GROUP BY country
-ORDER BY average DESC;
-```
-```sql
-SELECT country,  AVG(creditLimit)
-FROM customers
-GROUP BY country
-HAVING AVG(creditLimit) > 80000;
-```
-## 9. NULL
-데이터에 NULL이 존재할 경우, 오름차순 정렬시 결과에 NULL이 먼저 온다.
-
-### NULL 사용
-
-- ISNULL
-```SQL
-IFNULL(FREEZER_YN,'N') AS FREEZER_YN
-```
-- IF
-```SQL
-IF(FREEZER_YN IS NULL, "N", FREEZER_YN) AS FREEZER_YN
-```
-
 
