--- a/03_MySQL/7. Subquery/7-1. Subquery.md
+++ b/03_MySQL/7. Subquery/7-1. Subquery.md
@@ -1,5 +1,4 @@
-# KDT 2기 2월 16일 학습 내용
-Subquery: 하나의 쿼리 안에 또다른 쿼리
+## Subquery: 하나의 쿼리 안에 또다른 쿼리
 - SELECT, FROM, WHERE, HAVING 절 등에서 다양하게 쓰임
 
 Subquery 예시
