--- a/03_MySQL/4. Single Table Queries 2/4-1. Filtering Data.md
+++ b/03_MySQL/4. Single Table Queries 2/4-1. Filtering Data.md
@@ -1,6 +1,4 @@
-# KDT 2기 2월 13일 학습 내용
-
-## Filtering data
+# Filtering data
 데이터를 필터링하여 중복 제거, 조건 설정 등 SQL Query를 제어하기
 
 ### Filtering data 관련 Keywords
