--- a/03_MySQL/4. Single Table Queries 2/4-3. GROUP BY.md
+++ b/03_MySQL/4. Single Table Queries 2/4-3. GROUP BY.md
@@ -65,7 +65,7 @@ GROUP BY country
 HAVING AVG(creditLimit) > 80000;
 ```
 # HAVING
-## 그룹화 & 요약한 컬럼을 기준으로 조건 걸기
+### GROUP BY로 요약된 데이터들에게 조건을 거는 것
 ```sql
 SELECT 컬럼1, 집계함수(컬럼2), 
 FROM 테이블
