--- a/03_MySQL/5. Managing Tables/5-1. Managing Tables.md
+++ b/03_MySQL/5. Managing Tables/5-1. Managing Tables.md
@@ -1,7 +1,5 @@
-# KDT 2기 2월 14일 학습 내용
-DDL : Data Definition Language
-
-목차
+# DDL : Data Definition Language
+## 목차
 1. Create a table 
 2. Delete a table  
 3. Modifying table fields
