--- a/03_MySQL/6. Joining tables/6-1. Joining tables.md
+++ b/03_MySQL/6. Joining tables/6-1. Joining tables.md
@@ -7,6 +7,9 @@
 
 ![image](https://github.com/gata96/TIL/assets/121420427/2bf71938-fc83-45aa-a294-9c8ecd1b3df2)
 
+![image](https://github.com/gata96/TIL/assets/121420427/ebd2aa3c-e089-4161-be3c-45b4be54cc1f)
+
+
 ## JOIN의 종류
 - INNER JOIN
 - OUTER JOIN
@@ -26,11 +29,14 @@
 SELECT select_list
 FROM main_table
 INNER JOIN sub_table
-    ON main_table.fk = sub_table.pk;
+    ON main_table.공통키 = sub_table.공통키;
 ```
 - FROM 뒤에 메인 테이블
 - INNER JOIN 뒤에 메인 테이블과 조인할 서브 테이블
 - ON 뒤에는 main_table과 sub_table의 FK,PK(공통키)값을 적어준다.
+
+![image](https://github.com/gata96/TIL/assets/121420427/3cb1dbc6-1ae7-4429-9892-5523857fc145)
+
 
 ```sql
 SELECT title, content, name
@@ -52,19 +58,26 @@ INNER JOIN users
 ```sql
 SELECT articles.id,title, content, name
 FROM articles
-INNER JOIN users
+INNER [OUTER] JOIN users
     ON articles.userId = users.id;
 ```
 ## LEFT JOIN
-- 왼쪽 테이블 전부 + 교집합
+- 왼쪽 일단 다 출력 + 교집합
 - [OUTER]는 선택 사항
 - 왼쪽 테이블에서 교집합과 매치되는 레코드가 없으면 NULL로 채워진다.
+
+
 ```SQL
 SELECT select_list
-FROM left_table
-LEFT [OUTER] JOIN right_table
-    ON left_table.공통키 = right_table.공통키;
+FROM LEFT_table
+LEFT JOIN RIGHT_table
+    ON LEFT_table.공통키 = RIGHT_table.공통키;
 ```
+
+![image](https://github.com/gata96/TIL/assets/121420427/f82893d1-935c-4fb0-99c3-51b157ba4def)
+
+
+
 ```SQL
 SELECT *
 FROM articles
@@ -77,32 +90,36 @@ LEFT JOIN users
 
 ```SQL
 SELECT *
-FROM right_table
-LEFT JOIN left_table
-    ON right_table.공통키 = left_table.공통키;
+FROM LEFT_table
+RIGHT JOIN RIGHT_table
+    ON LEFT_table.공통키 = RIGHT_table.공통키;
+
+-- LEFT, RIGHT TABLE의 위치는 바뀌지 않는다.
 ```
+![image](https://github.com/gata96/TIL/assets/121420427/34574ed4-9f7d-4a01-9ed8-18674033e129)
+
 ## 합집합 UNION
 ```SQL
-SELECT * FROM left_table
-LEFT JOIN right_table ON left_table.공통키 = right_table.공통키
+SELECT * FROM LEFT_table
+LEFT JOIN RIGHT_table ON LEFT_table.공통키 = RIGHT_table.공통키
 
 UNION
 
-RIGHT JOIN right_table ON left_table.공통키 = right_table.공통키;
+RIGHT JOIN RIGHT_table ON LEFT_table.공통키 = RIGHT_table.공통키;
 ```
 
 ## 교집합 빼고 LEFT만
 ```sql
-SELECT * FROM left_table
-LEFT JOIN right_table
-    ON left_table.공통키 = right_table.공통키
-WHERE right_table.공통키 IS NULL;
+SELECT * FROM LEFT_table
+LEFT JOIN RIGHT_table
+    ON LEFT_table.공통키 = RIGHT_table.공통키
+WHERE RIGHT_table.공통키 IS NULL;
 ```
 
 ## 교집합 빼고 RIGHT만
 ```sql
-SELECT * FROM right_table
-RIGHT JOIN left_table
-    ON left_table.공통키 = right_table.공통키
-WHERE left_table.공통키 IS NULL;
+SELECT * FROM RIGHT_table
+RIGHT JOIN LEFT_table
+    ON LEFT_table.공통키 = RIGHT_table.공통키
+WHERE LEFT_table.공통키 IS NULL;
 
