--- a/03_MySQL/6. Joining tables/6-1. Joining tables.md
+++ b/03_MySQL/6. Joining tables/6-1. Joining tables.md
@@ -1,9 +1,4 @@
-# KDT 2기 2월 15일 학습 내용
-
-테이블을 분리하는 이유? 관리하기 편하도록
-=> 테이블을 분리하면 관리는 용이해질 수 있으나 출력 할 때는 테이블 한 개만은 출력할 수 없어서 다른 테이블과 연결지어 출력한다.
-
-# JOIN : 둘 이상의 테이블을 연결지어 데이터를 검색하는 방법
+# JOIN 쓰는 이유 : 둘 이상의 테이블을 연결지어 데이터를 검색하기 위해
 
 ![image](https://github.com/gata96/TIL/assets/121420427/2bf71938-fc83-45aa-a294-9c8ecd1b3df2)
 
@@ -37,6 +32,12 @@ INNER JOIN sub_table
 
 ![image](https://github.com/gata96/TIL/assets/121420427/3cb1dbc6-1ae7-4429-9892-5523857fc145)
 
+### 💡INNER JOIN 대신 WHERE로 쓸 수도 있다.
+```SQL
+SELECT select_list
+FROM main_table, sub_table
+WHERE main_table.공통키 = sub_table.공통키;
+```
 
 ```sql
 SELECT title, content, name
